Edit typo in R version

--- a/DataScienceDay2017-UtrechtUniversity-R-notebook.ipynb
+++ b/DataScienceDay2017-UtrechtUniversity-R-notebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Engineering: Clean and Integrate Your Data! - Python version\n",
+    "# Data Engineering: Clean and Integrate Your Data! - R version\n",
     "\n",
     "*Authors: [Jonathan de Bruin](https://www.uu.nl/medewerkers/JdeBruin1) and [Frans de Liagre Böhl](https://www.uu.nl/medewerkers/FMTdeLiagreBohl)*\n",
     "\n",
