Fix grammar and spelling issues

--- a/DataScienceDay2017-UtrechtUniversity-R-notebook.ipynb
+++ b/DataScienceDay2017-UtrechtUniversity-R-notebook.ipynb
@@ -191,15 +191,15 @@
    "metadata": {},
    "source": [
     "## Explore the data <a class=\"anchor\" id=\"explore\"></a>\n",
-    "The most essential part in data handling and cleaning is exploring the data. This part can take a relatively large amount of your time, but can be critical in your research. The most basic type of exploring to data is just by looking to some records. There are also more systematic approaches possible. Some tips when exploring data:\n",
+    "The most important part of data handling and cleaning is exploring the data. This part can take a relatively large amount of your time but can be critical in your research. The most basic type of data exploration is just by looking at some records. There are also more systematic approaches possible. Some tips when exploring data:\n",
     "\n",
-    "- Read the datasets metadata is available.\n",
+    "- Read the metadata of the dataset is available.\n",
     "- Check [data types](https://en.wikipedia.org/wiki/Data_type)\n",
     "- Check record identifiers and subject/entity identifiers (are they unique or not?)\n",
     "- Count the number of unique observations for each variable and is this more or less than the number of possible outcomes?\n",
     "- Sort the data on interesting variables.\n",
     "- Find out how the (date) observations are formatted.\n",
-    "- Visualize histograms or distributions (of counts).\n",
+    "- Visualise histograms or distributions (of counts).\n",
     "- Identify (all) overlapping variables between datasets."
    ]
   },
@@ -532,7 +532,7 @@
    "metadata": {},
    "source": [
     "### Variable 2: place_of_death <a class=\"anchor\" id=\"explore-var-address\"></a>\n",
-    "The place of death is an address which is stored in a single column as text. Such a variable is much harder to explore. You need visual inspection to explore such a variable. In our case, there is some sort of structure in most of the records. "
+    "The place of death is an address which is stored in a single column as text. Such a variable is much harder to explore. You need a visual inspection to explore such a variable. In our case, there is some sort of structure in most of the records. "
    ]
   },
   {
@@ -769,7 +769,7 @@
     "\n",
     "> Data cleansing, data cleaning, or data scrubbing is the process of detecting and correcting (or removing) corrupt or inaccurate records from a record set, table, or database and refers to identifying incomplete, incorrect, inaccurate or irrelevant parts of the data and then replacing, modifying, or deleting the dirty or coarse data. Data cleansing may be performed interactively with data wrangling tools, or as batch processing through scripting. ([Wikipedia, Data Cleansing](https://en.wikipedia.org/wiki/Data_wrangling))\n",
     "\n",
-    "Sometimes it is hard to decide whether to clean everything by hand (data munging/wrangling) with tools like OpenRefine and Excel, or to clean by scripting. In general, large datasets are better to script, while smaller ones can be cleaned by hand within the time of a coffee break. Switching from data munging to scripting is no waste of time, because it improves the quality of the script. "
+    "Sometimes it is hard to decide whether to clean everything by hand (data munging/wrangling) with tools like OpenRefine and Excel or clean by scripting. In general, large datasets are better to script, while smaller ones can be cleaned by hand within the time of a coffee break. Switching from data munging to scripting is no waste of time because it improves the quality of the script."
    ]
   },
   {
@@ -1082,7 +1082,7 @@
     "## Enrich the data <a class=\"anchor\" id=\"enrich\"></a>\n",
     "The ICD-10 codes are not very informative without a description of the disease or health problem. In the following notebook cell, we are enriching the hospital data with a description of the ICD-10 codes. The USA government has descriptions of the ICD-10 codes online (https://www.cdc.gov/nchs/icd/icd10.htm). The data is in the Fixed Width Formatted (FWF) data format. \n",
     "\n",
-    "A bit bored because everything is already part of your daily routines? Check out these bizarre ICD10 codes: http://www.schumacherclinical.com/health-care-insights/2015/9/top-20-craziest-icd-10-codes. Our favorite is \"Sucked into jet engine, subsequent encounter.\""
+    "A bit bored because everything is already part of your daily routines? Check out these bizarre ICD10 codes: http://www.schumacherclinical.com/health-care-insights/2015/9/top-20-craziest-icd-10-codes. Our favourite is \"Sucked into jet engine, subsequent encounter.\""
    ]
   },
   {
@@ -1741,7 +1741,9 @@
    "source": [
     "## Final words <a class=\"anchor\" id=\"final-words\"></a>\n",
     "\n",
-    "The examples given in this notebook gave you a very short introduction in the topic of data cleaning and integration. Data cleansing and integration is a very time consuming part of a research. We hope that this notebook shows the need for good data cleaning and the consequences if done badly. Data cleansing and integration is an active research field. Developments in the field of machine learning may lead to new opportunities. Nevertheless, the data cleansing techniques like discussed in this notebook remain relevant. "
+    "The examples given in this notebook gave you a very short introduction on the topic of data cleaning and integration in R. Data cleansing and integration are a very time-consuming part of a research. We hope that this notebook shows the need for good data cleaning and the consequences if done badly. Data cleansing and integration is an active research field. Developments in the field of machine learning may lead to new opportunities. Nevertheless, the data cleansing techniques like discussed in this notebook remain relevant.\n",
+    "\n",
+    "Questions or remarks about the topic or this notebook? Send an email to j.debruin1@uu.nl. \n"
    ]
   }
  ],
