Use local copy of ICD10 dataset in code

--- a/DataScienceDay2017-UtrechtUniversity-R-notebook.ipynb
+++ b/DataScienceDay2017-UtrechtUniversity-R-notebook.ipynb
@@ -1191,7 +1191,10 @@
    ],
    "source": [
     "# the location of the file with ICD-10 codes\n",
-    "file.path.icd10 <- \"ftp://ftp.cdc.gov/pub/Health_Statistics/NCHS/Publications/ICD10CM/2017/icd10cm_codes_2017.txt\"\n",
+    "# file.path.icd10 <- \"ftp://ftp.cdc.gov/pub/Health_Statistics/NCHS/Publications/ICD10CM/2017/icd10cm_codes_2017.txt\"\n",
+    "\n",
+    "# Using a copy due to repeating server issues\n",
+    "file.path.icd10 <- \"https://raw.githubusercontent.com/J535D165/Data-Science-Day/master/data/icd10cm_codes_2017.txt\"\n",
     "\n",
     "# download the data\n",
     "df.icd10 <- read.fwf(file.path.icd10, c(8, 1000), \n",
