Use reshape2 instead of reshape

--- a/DataScienceDay2017-UtrechtUniversity-R-notebook.ipynb
+++ b/DataScienceDay2017-UtrechtUniversity-R-notebook.ipynb
@@ -1485,7 +1485,7 @@
     }
    ],
    "source": [
-    "library(\"reshape\", warn.conflicts=FALSE)\n",
+    "library(\"reshape2\", warn.conflicts=FALSE)\n",
     "library(\"ggplot2\")\n",
     "\n",
     "# compute the Levensthein distance between all patient_id's \n",
